--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 body {
-  background-color: black;
-  color: orange;
+  background-color: white;
+  color: black;
 }
 
 .navbar {
@@ -8,7 +8,7 @@ body {
 }
 
 .nav-link {
-  color: black;
+  color: orange;
 }
 
 .nav-link:hover {
