--- a/views/kirjoitukset.ejs
+++ b/views/kirjoitukset.ejs
@@ -3,23 +3,48 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>GameHub - Kirjoitukset</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/styles.css">  <title>GameHub - Kirjoitukset</title>
+  <link rel="stylesheet" type="text/css" href="/styles.css">
+
+  <style>
+    .add-post-button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  </style>
 </head>
 <body>
-  <%- include('partials/navbar') %>
-  <div class="container mt-4">
-    <div class="row">
-      <% for (const post of posts) { %>
-        <div class="col-md-4 col-sm-6">  <div class="card mb-4 bg-dark text-light">  <img src="<%= post.imageUrl %>" class="card-img-top" alt="<%= post.title %>">
-            <div class="card-body">
-              <h5 class="card-title text-warning"><%= post.title %></h5>  <p class="card-text"><%= post.description %></p>
-              <a href="#" class="btn btn-warning">Lue lisää</a>  </div>
-          </div>
+<%- include('partials/navbar') %>
+
+<div class="container mt-4">
+  <h1>Kirjoitukset</h1>
+  <div class="row">
+    <% posts.forEach(post => { %>
+    <div class="col-md-4">
+      <div class="card mb-4">
+        <div class="card-body">
+          <h5 class="card-title"><%= post.title %></h5>
+          <a href="/post/<%= post._id %>" class="btn btn-primary">Lue lisää</a>
         </div>
-      <% } %>
+      </div>
+    </div>
+    <% }) %>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row justify-content-end">
+    <div class="col-md-4">
+      <a href="/new" class="btn btn-success add-post-button">Lisää uusi kirjoitus</a>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
+
+ 
