--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,21 +10,21 @@
 <body>
   <%- include('partials/navbar') %>
   <div class="container mt-4">
+    <h1>Tervetuloa GameHub Blogiin!</h1>
+    <p>Tässä on ensimmäinen blogikirjoitukseni...</p>
+    <h2>Viimeisimmät postaukset:</h2>
     <div class="row">
-      <div class="col">
-        <h1>Tervetuloa GameHub Blogiin!</h1>
-        <p>Tässä on ensimmäinen blogikirjoitukseni...</p>
-        <h2>Viimeisimmät postaukset:</h2>
-        <ul>
-          <% posts.forEach(post => { %>
-            <li>
-              <h3><%= post.otsikko %></h3>
-              <p><%= post.kuvaus %></p>
-              <p><%= post.sisalto %></p>
-            </li>
-          <% }); %>
-        </ul>
-      </div>
+      <% posts.forEach(post => { %>
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h3 class="card-title"><%= post.otsikko %></h3>
+              <p class="card-text"><%= post.kuvaus %></p>
+              <p class="card-text"><%= post.sisalto %></p>
+            </div>
+          </div>
+        </div>
+      <% }); %>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
