--- a/views/kirjoitukset.ejs
+++ b/views/kirjoitukset.ejs
@@ -6,19 +6,16 @@
   <title>GameHub - Kirjoitukset</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/styles.css">
-
-  <style>
-    .add-post-button {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-  </style>
 </head>
 <body>
 <%- include('partials/navbar') %>
 
 <div class="container mt-4">
+  <div class="row justify-content-end">
+    <div class="col-md-12">
+      <a href="/new" class="btn btn-success mb-3">Lisää uusi kirjoitus</a>
+    </div>
+  </div>
   <h1>Kirjoitukset</h1>
   <div class="row">
     <% posts.forEach(post => { %>
@@ -34,17 +31,7 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="row justify-content-end">
-    <div class="col-md-4">
-      <a href="/new" class="btn btn-success add-post-button">Lisää uusi kirjoitus</a>
-    </div>
-  </div>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
-
- 
