--- a/views/kirjoitukset.ejs
+++ b/views/kirjoitukset.ejs
@@ -19,6 +19,17 @@
   <h1>Kirjoitukset</h1>
   <div class="row">
     <% posts.forEach(post => { %>
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <div class="card-body">
+            <h5 class="card-title"><%= post.otsikko %></h5>
+            <p class="card-text"><%= post.kuvaus %></p>
+            <a href="/post/<%= post._id %>" class="btn btn-primary">Lue lisää</a>
+          </div>
+        </div>
+      </div>
+    <% }) %>
+    <!-- <% posts.forEach(post => { %>
     <div class="col-md-4">
       <div class="card mb-4">
         <div class="card-body">
@@ -27,7 +38,7 @@
         </div>
       </div>
     </div>
-    <% }) %>
+    <% }) %> -->
   </div>
 </div>
 
